Test requiresRuntimePrompt
Bug: 278717094
Test: DeviceAndSnapshotComboBoxTargetProviderTest
Change-Id: Id7ecef5feee6134c2dd488b0cae28f05ee976f43

GitOrigin-RevId: 2ad054250c93cecb6aa41e960dcb902592c4ef5e